<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:drawablePadding="10sp"
        android:fontFamily="@font/baloo"
        android:gravity="center_vertical"
        android:text="@string/logo_event"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:drawableStartCompat="@drawable/ic_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/baloo"
        android:text="@string/info_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/main_logo"
        app:layout_constraintTop_toBottomOf="@+id/main_logo" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/event_name"
        android:textColor="@color/button_orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/baloo"
        android:text="@string/info_date"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/event_date"
        android:textColor="@color/button_orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_date"
        app:layout_constraintTop_toBottomOf="@+id/text_date" />

    <TextView
        android:id="@+id/event_text_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/baloo"
        android:text="@string/info_members"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/text_date"
        app:layout_constraintTop_toBottomOf="@+id/text_date" />

    <TextView
        android:id="@+id/event_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/event_members"
        android:textColor="@color/button_orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/event_text_members"
        app:layout_constraintTop_toBottomOf="@+id/event_text_members" />

    <TextView
        android:id="@+id/event_text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/baloo"
        android:text="@string/info_location"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/event_text_members"
        app:layout_constraintTop_toBottomOf="@+id/event_text_members" />

    <TextView
        android:id="@+id/event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/event_location"
        android:textColor="@color/button_orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/event_text_location"
        app:layout_constraintTop_toBottomOf="@+id/event_text_location" />

    <Button
        android:id="@+id/menu_button_back"
        android:layout_width="300sp"
        android:layout_marginStart="30dp"
        android:layout_height="45sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_casual_form"
        android:backgroundTint="@color/white_smoke"
        android:fontFamily="@font/baloo"
        android:text="@string/back_button"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/event_text_location"
        app:layout_constraintTop_toBottomOf="@+id/event_location" />

</androidx.constraintlayout.widget.ConstraintLayout>