<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context="com.chipin.CreateEvent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/up_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clickable="true"
        android:background="@color/main_orange"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:drawablePadding="10sp"
            android:fontFamily="@font/baloo_cyrillic"
            android:gravity="center_vertical"
            android:text="@string/logo_app"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:drawableStartCompat="@drawable/ic_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/down_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:clickable="true"
        android:background="@color/main_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/baloo_cyrillic"
        android:text="@string/create_text_fill"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/up_layout"
        app:layout_constraintTop_toBottomOf="@+id/up_layout" />

    <EditText
        android:id="@+id/event_enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/input_form"
        android:ems="6"
        android:fontFamily="@font/baloo_cyrillic"
        android:hint="@string/create_hint_name"
        android:inputType="text"
        android:maxLength="12"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/text_enter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_enter"
        app:layout_constraintTop_toBottomOf="@+id/text_enter"
        android:autofillHints="@string/create_hint_name" />

    <EditText
        android:id="@+id/event_enter_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/create_hint_date"
        android:background="@drawable/input_form"
        android:ems="6"
        android:fontFamily="@font/baloo_cyrillic"
        android:hint="@string/create_hint_date"
        android:inputType="date"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/event_enter_name"
        app:layout_constraintStart_toStartOf="@+id/event_enter_name"
        app:layout_constraintTop_toBottomOf="@+id/event_enter_name" />

    <EditText
        android:id="@+id/event_enter_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_form"
        android:ems="6"
        android:fontFamily="@font/baloo_cyrillic"
        android:hint="@string/create_hint_members"
        android:inputType="number"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/event_enter_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/event_enter_date"
        app:layout_constraintTop_toBottomOf="@+id/event_enter_date"
        android:autofillHints="@string/create_hint_members" />

    <EditText
        android:id="@+id/event_enter_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_form"
        android:ems="6"
        android:fontFamily="@font/baloo_cyrillic"
        android:hint="@string/create_hint_location"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/event_enter_members"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/event_enter_members"
        app:layout_constraintTop_toBottomOf="@+id/event_enter_members"
        android:autofillHints="@string/create_hint_members" />

    <Button
        android:id="@+id/create_button_create"
        android:layout_width="165sp"
        android:onClick="createEvent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_casual_form"
        android:backgroundTint="@color/button_orange"
        android:fontFamily="@font/baloo_cyrillic"
        android:text="@string/create_button_create"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/event_enter_location"
        app:layout_constraintTop_toBottomOf="@+id/event_enter_location" />

    <Button
        android:id="@+id/create_button_back"
        android:layout_width="165sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:onClick="goBack"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_casual_form"
        android:backgroundTint="@color/white_smoke"
        android:fontFamily="@font/baloo_cyrillic"
        android:text="@string/back_button"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/create_button_create"
        app:layout_constraintTop_toBottomOf="@+id/event_enter_location" />

</androidx.constraintlayout.widget.ConstraintLayout>