<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white"
    tools:context="com.chipin.MainMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/up_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clickable="true"
        android:background="@color/main_orange"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:drawablePadding="10sp"
            android:fontFamily="@font/baloo_cyrillic"
            android:gravity="center_vertical"
            android:text="@string/logo_app"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:drawableStartCompat="@drawable/ic_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_food"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:onClick="goToFood"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:paddingTop="20dp"
        android:drawableTop="@drawable/ic_food_button"
        android:fontFamily="@font/baloo_cyrillic"
        android:text="@string/logo_food"
        android:background="@drawable/button_main_menu_form"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/up_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/up_layout"
        app:layout_constraintTop_toBottomOf="@+id/up_layout" />

    <Button
        android:id="@+id/button_drinks"
        android:layout_width="130sp"
        android:onClick="goToDrinks"
        android:layout_height="130sp"
        android:layout_marginStart="20dp"
        android:paddingTop="20dp"
        android:layout_marginTop="100dp"
        android:drawableTop="@drawable/ic_drinks_button"
        android:background="@drawable/button_main_menu_form"
        android:fontFamily="@font/baloo_cyrillic"
        android:text="@string/logo_drinks"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button_food"
        app:layout_constraintTop_toBottomOf="@+id/up_layout" />

    <Button
        android:id="@+id/button_else"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:layout_marginTop="20dp"
        android:onClick="gotToElse"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        android:fontFamily="@font/baloo_cyrillic"
        android:background="@drawable/button_main_menu_form"
        android:drawableTop="@drawable/ic_else_button"
        android:text="@string/logo_else"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/button_event"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_food"
        app:layout_constraintTop_toBottomOf="@+id/button_food" />

    <Button
        android:id="@+id/button_event"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:paddingTop="20dp"
        android:background="@drawable/button_main_menu_form"
        android:layout_marginTop="20dp"
        android:drawableTop="@drawable/ic_event_button"
        android:fontFamily="@font/baloo_cyrillic"
        android:backgroundTintMode="multiply"
        android:onClick="goToEvent"
        android:text="@string/logo_event"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/button_drinks"
        app:layout_constraintTop_toBottomOf="@+id/button_drinks" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/down_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:clickable="true"
        android:background="@color/main_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>